# mesh_network

./: Cargo.toml  claudes_weird_poem.md  plan_of_attack.md  projectPlan.md  readme.md
src/: auth.rs  core_specification.md  crypto.rs  error.rs  howToTest.md  lib.rs  logging.rs  main.rs  network.rs  packet.rs  routing.rs  state.rs  validate.rs
src/examples/: basic_usage.rs  logging.rs  mesh_node.rs  network_usage.rs  packet_parsing.rs  packet_validation.rs
src/tests/common/: mod.rs
src/tests/unit/: mod.rs  network_tests.rs  packet_tests.rs
tests/common/: mod.rs
tests/unit/: mod.rs  network_tests.rs  packet_tests.rs  routing_tests.rs  validation_tests.rs
