[package]
name = "mesh_network"
version = "0.1.0"
edition = "2021"

[dependencies]
ring = "0.16"        # For cryptographic operations (Ed25519KeyPair)
hashbrown = "0.14"   # For no_std HashMap implementation
zerocopy = "0.6"     # For zero-copy serialization

# Removed unnecessary dependencies:
# - thiserror (using custom Error enums instead)
# - bytes (using Vec<u8> directly)
# - tokio (not needed for core mesh networking)
# - serde_json (not using JSON serialization)
# - heapless (using alloc with hashbrown instead)

[features]
default = []